lb-eks.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: populous
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: populous
