deploy-populous.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: populous
  labels:
    app: populous
spec:
  replicas: 3
  selector:
    matchLabels:
      app: populous
  template:
    metadata:
      labels:
        app: populous
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: 081773867318.dkr.ecr.us-west-2.amazonaws.com/eks-p-ecrdo-rxe0h3nlqkan:populous.master..2019-11-16.21.14.13.e8cc1b12
          imagePullPolicy: Always
          name: populous
          ports:
            - containerPort: 8000
              name: populous
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pldb
  labels:
    app: pldb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pldb
  template:
    metadata:
      labels:
        app: pldb
    spec:
      containers:
        - image: drajen/pldb:latest
          name: pldb
          ports:
            - containerPort: 3306
              name: pldb
          volumeMounts:
            - name: pldb
              mountPath: /var/lib/mysql
      volumes:
        - name: pldb
          persistentVolumeClaim: 
            claimName: pldb
---
apiVersion: v1
kind: Service
metadata:
  name: pldb
spec:
  selector:
    app: pldb
  ports:
  - name: pldb
    protocol: TCP
    port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: populous
  annotations:
    service.beta.kubernetes.io/epic-internal-gateway: "false"
  labels:
    app: populous
spec:
  selector:
    app: populous
  ports:
  - name: populous
    port: 80
    targetPort: 8000
    protocol: TCP
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: populous
spec:
  rules:
  - host: populous.dev.datamattsson.io
    http:
      paths:
      - path: /
        backend:
          serviceName: populous
          servicePort: populous
